# microblog-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  log4rs-config.yml
src/: commands.rs  json_models.rs  main.rs
